# myeditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aiassistantwidget.cpp  aiassistantwidget.h  commandpalette.cpp  commandpalette.h  cpphighlighter.cpp  cpphighlighter.h  editorwidget.cpp  editorwidget.h  filetreewidget.cpp  filetreewidget.h  findreplacedialog.cpp  findreplacedialog.h  generichighlighter.cpp  generichighlighter.h  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  mindedge.cpp  mindedge.h  mindmapaidialog.cpp  mindmapaidialog.h  mindmapcommands.cpp  mindmapcommands.h  mindmapview.cpp  mindmapview.h  mindnode.cpp  mindnode.h  minimapwidget.cpp  minimapwidget.h  preferencesdialog.cpp  preferencesdialog.h  syntaxdefinition.cpp  syntaxdefinition.h  syntaxmanager.cpp  (+10 more)
syntax/: cpp.json  json.json  python.json
